# sam-horse-segmentation

./: .gitignore  README.md  pyproject.toml
notebook/: 01_sam_tutorial.ipynb  02_change_params.ipynb
