[tool.poetry]
name = "sam-horse-segmentation"
version = "0.1.0"
description = ""
authors = ["baibai25 <kamuy.camel.0225@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.12.0"
ipykernel = "^6.27.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
pycocotools = "^2.0.7"
matplotlib = "^3.8.2"
onnxruntime = "^1.16.3"
onnx = "^1.15.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
supervision = "^0.16.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
